--- a/java-7/Dockerfile
+++ b/java-7/Dockerfile
@@ -5,7 +5,7 @@ ARG JAVA_WEBUPD8_VERSION=oracle-java7-installer
 RUN apt-get -y update && apt-get install -y software-properties-common curl wget zip unzip git mercurial
 
 RUN add-apt-repository ppa:webupd8team/java -y && \
-    echo ${JAVA_WEBUPD8_VERSION} shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
+    echo ${JAVA_WEBUPD8_VERSION} shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
 
 RUN apt-get -y update && apt-get install -y ${JAVA_WEBUPD8_VERSION}
 
